Minor Bug fixes related to alignment

--- a/hackathon/static/css/style.css
+++ b/hackathon/static/css/style.css
@@ -749,8 +749,11 @@ ul.copy-rt li a:hover{
 }
 @media screen and (max-width:768px){
     svg#clouds {
-        height: 150px;
+        height: 70px;
     }
+.sports-flow{
+	padding-bottom:100px;
+}
     a.boxclose {
         right: 1.8em;
     }
@@ -881,7 +884,7 @@ ul.copy-rt li a:hover{
         padding: 22px 0px;
     }
     svg#clouds {
-        height: 105px;
+        height: 40px;
     }
     .abt_top_grid p {
         font-size: 12.5px;
@@ -993,7 +996,7 @@ ul.copy-rt li a:hover{
         top: 13%;
     }
     svg#clouds {
-        height: 35px;
+        height: 25px;
     }
     .carousel-indicators {
         display: none;
